@@ -50,12 +50,12 @@ public class BannerEditor implements InventoryProvider {
         alphabetBordered = new HashMap<>();
         for (char c : symbols.toCharArray()) {
             final List<Pattern> list = alphabet(DyeColor.WHITE, DyeColor.BLACK, c, true);
-            alphabetBordered.put(c, list.toArray(new Pattern[0]));
+            alphabetBordered.put(c, list.toArray(new Pattern[list.size()]));
         }
         alphabetNotBordered = new HashMap<>();
         for (char c : symbols.toCharArray()) {
             final List<Pattern> list = alphabet(DyeColor.WHITE, DyeColor.BLACK, c, false);
-            alphabetNotBordered.put(c, list.toArray(new Pattern[0]));
+            alphabetNotBordered.put(c, list.toArray(new Pattern[list.size()]));
         }
         patternExample = new HashMap<>();
         for (PatternType patternType : PatternType.values()) {
@@ -225,7 +225,7 @@ public class BannerEditor implements InventoryProvider {
 
                 for (char c : symbols.toCharArray()) {
                     content.add(ClickableItem.of(genBanner(inverted(bordered, c) ? Material.BLACK_BANNER : Material.WHITE_BANNER,
-                        "§f" + c,
+                            "§f" + String.valueOf(c),
                         List.of(Component.text("§fЛКМ §7- §1наложить слои")),
                         bordered ? alphabetBordered.get(c) : alphabetNotBordered.get(c)), e -> {
                         patterns = alphabet(DyeColor.WHITE, DyeColor.BLACK, c, bordered);
@@ -239,7 +239,7 @@ public class BannerEditor implements InventoryProvider {
             case Маска:
                 for (PatternType patternType : PatternType.values()) {
                     content.add(ClickableItem.of(patternExample.get(patternType), e -> {
-                        patterns.set(editIdx, ((BannerMeta) patternExample.get(patternType).getItemMeta()).getPatterns().getFirst());
+                        patterns.set(editIdx, ((BannerMeta) patternExample.get(patternType).getItemMeta()).getPatterns().get(0));
                         reopen(p, content);
                     }));
                 }
@@ -819,4 +819,4 @@ public class BannerEditor implements InventoryProvider {
 
 }
 
-enum EditMode {Нет, Основа, Символ, Маска, Цвет}
+enum EditMode {Нет, Основа, Символ, Маска, Цвет};
